--- a/src/app/components/log-form/log-form.component.html
+++ b/src/app/components/log-form/log-form.component.html
@@ -1,9 +1,22 @@
 <div class="card card-body mb-3">
-  <form action="">
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Add a logg...">
+      <input 
+        type="text" 
+        name="title" 
+        class="form-control" 
+        placeholder="Add a new log..." 
+        [(ngModel)]="title">
     </div>
-    <input type="submit" value="Add Log" class="btn btn-light" [disabled]="!this.text">
-    <button type="button" class="btn btn-warning" [hidden]="!this.text">Clear</button>
+    <input 
+      type="submit" 
+      value="Add Log" 
+      class="btn btn-light" 
+      [disabled]="!this.title">
+    <button 
+      type="button" 
+      class="btn btn-warning" 
+      [hidden]="!this.title"
+      (click)="clearState()">Clear</button>
   </form>
 </div>
